# VectorForge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vectorforge/: __init__.py  brute_force.py  distance.py  hnsw.py  persistence.py
tests/: test_brute_force.py  test_hnsw.py  test_metadata.py  test_persistence.py  test_smoke.py
