[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorforge"
version = "0.1.0"
description = "A distributed vector search engine implementing HNSW indexing from scratch."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy>=1.26",
    "numba>=0.59",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["vectorforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
